Quité el train_test_split

--- a/PrimeraEtapa.ipynb
+++ b/PrimeraEtapa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "id": "f7c147dc",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "30                     0          1            0  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "89fa8341",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,15 +542,15 @@
     "X = df.drop(columns = [\"Precio de Venta (pesos)\"])\n",
     "y = df[\"Precio de Venta (pesos)\"]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2,random_state = 42)\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2,random_state = 42)\n",
     "\n",
     "model = linear_model.LinearRegression()\n",
-    "model.fit(X_train,y_train)"
+    "model.fit(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "id": "f3efc074",
    "metadata": {},
    "outputs": [
@@ -558,12 +558,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r^2 = 85.23094796052871%\n"
+      "r^2 = 89.64284060297382%\n"
      ]
     }
    ],
    "source": [
-    "r2_score = model.score(X_test,y_test)\n",
+    "r2_score = model.score(X,y)\n",
     "print(f\"r^2 = {r2_score*100}%\")"
    ]
   }
