--- a/PrimeraEtapa.ipynb
+++ b/PrimeraEtapa.ipynb
@@ -665,6 +665,27 @@
     "r2_score = model.score(X,y)\n",
     "print(f\"r^2 = {r2_score*100}%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c1c82343",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/ArmandoTerrazasGomez/Documents/Universidad/Semestre 2/Análisis Estadístico/RetoEtapa1'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
   }
  ],
  "metadata": {
