Redondée todos los datos

--- a/PrimeraEtapa.ipynb
+++ b/PrimeraEtapa.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "db07e7b2",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r^2 = 76.11488076046545%\n"
+      "r^2 = 76.1149%\n"
      ]
     },
     {
@@ -449,7 +449,7 @@
     "plt.text(10, 250000, 'y = ' + str(modelo1.coef_) + ' * x + ' + str(modelo1.intercept_) ,verticalalignment='center')\n",
     "\n",
     "r2_score_1 = modelo1.score(X1,y1)\n",
-    "print(f\"r^2 = {r2_score_1*100}%\")"
+    "print(f\"r^2 = {round(r2_score_1*100,4)}%\")"
    ]
   },
   {
@@ -499,7 +499,7 @@
     "                                                                                                                                                                                                                              \n",
     "plt.show()\n",
     "\n",
-    "print(f\"r^2 = {lin_reg.score(x_poly,y1)*100}%\")"
+    "print(f\"r^2 = {round(lin_reg.score(x_poly,y1)*100,4)}%\")"
    ]
   },
   {
@@ -547,7 +547,7 @@
     "ss_res = np.sum(residuals**2)\n",
     "ss_tot = np.sum((y1-np.mean(y1))**2)\n",
     "r_squared = 1 - (ss_res / ss_tot)\n",
-    "print(f\"r^2 = {r_squared*100}%\")"
+    "print(f\"r^2 = {round(r_squared*100,4)}%\")"
    ]
   },
   {
@@ -593,13 +593,13 @@
     "plt.text(210, 250000, 'y = ' + str(modelo2.coef_) + ' * x + ' + str(modelo2.intercept_) ,verticalalignment='center')\n",
     "\n",
     "r2_score_2 = modelo2.score(X2,y2)\n",
-    "print(f\"r^2 = {r2_score_2*100}%\")"
+    "print(f\"r^2 = {round(r2_score_2*100,4)}%\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "35c8c0f8",
+   "id": "9bbc4f63",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
     "                                                                                                                                                                                                                              \n",
     "plt.show()\n",
     "\n",
-    "print(f\"r^2 = {lin_reg_2.score(x_poly2,y2)*100}%\")"
+    "print(f\"r^2 = {round(lin_reg_2.score(x_poly2,y2)*100,4)}%\")"
    ]
   },
   {
